Update Car Price prediction.ipynb

--- a/Oasis Infobyte Internship DS/Car Price Prediction Using Machine Learning/Car Price prediction.ipynb
+++ b/Oasis Infobyte Internship DS/Car Price Prediction Using Machine Learning/Car Price prediction.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "# Loading data\n",
-    "df = pd.read_csv('')"
+    "df = pd.read_csv('https://raw.githubusercontent.com/cherypallysaisurya/Oasis-Infobyte-Data-Science/main/Oasis%20Infobyte%20Internship%20DS/Car%20Price%20Prediction%20Using%20Machine%20Learning/CarPrice_Assignment.csv')"
    ]
   },
   {
